# SUPerman

./: 404.html  AlgorithmRecommender.cpp  AlgorithmRecommender.h  CMakeLists.txt  Makefile  MatrixMarketIOLibrary.cpp  MatrixMarketIOLibrary.h  README.md  args.hpp  cpu_algos.hpp  cpu_perman  gpu_approximation_dense.cu  gpu_exact_sparse.cu  index.html  main.cpp  mkdocs.yml  search.html  sitemap.xml  todo  util.h
.github/workflows/: documentations.yml
access_measurement/: Makefile  cpu_algos.hpp  flags.h  gpu_approximation_sparse.cu  gpu_exact_dense.cu  gpu_wrappers.h  tries.c  try
docs/: examples.md  implementations.md  index.md  usage.md
examples/: index.html
implementations/: index.html
kernel_size_measurement/: CYCLE30_100.txt  CYCLE30_101.txt  CYCLE30_102.txt  CYCLE30_103.txt  CYCLE30_104.txt  CYCLE30_105.txt  CYCLE30_106.txt  CYCLE30_107.txt  CYCLE30_108.txt  CYCLE30_109.txt  CYCLE30_110.txt  CYCLE30_111.txt  CYCLE30_112.txt  CYCLE30_113.txt  CYCLE30_114.txt  CYCLE30_115.txt  CYCLE30_116.txt  CYCLE30_117.txt  CYCLE30_118.txt  CYCLE30_119.txt  CYCLE30_120.txt  CYCLE30_121.txt  CYCLE30_122.txt  CYCLE30_123.txt  CYCLE30_124.txt  CYCLE30_125.txt  CYCLE30_126.txt  CYCLE30_127.txt  CYCLE30_128.txt  CYCLE30_129.txt  CYCLE30_130.txt  CYCLE30_131.txt  CYCLE30_132.txt  CYCLE30_133.txt  CYCLE30_134.txt  CYCLE30_135.txt  CYCLE30_136.txt  CYCLE30_137.txt  CYCLE30_138.txt  CYCLE30_139.txt  (+1839 more)
matrices/onematrices/: 30_one.mtx  31_one.mtx  32_one.mtx  33_one.mtx  34_one.mtx  35_one.mtx  36_one.mtx  37_one.mtx  38_one.mtx  (+2 more)
search/: search_index.json
usage/: index.html
